--- a/Todo
+++ b/Todo
@@ -1,6 +1,7 @@
 //TODO
 
-1. Farenheit to Celcius conversion
-2. Error reporting!
-3. Wind speed/direction indicator
+1. Farenheit to Celcius conversion done
+2. Error reporting! done
+3. Wind speed/direction indicator done
 4. Background pictures change per current weather conditions
+5. Forecast.io badge done
